--- a/package.json
+++ b/package.json
@@ -1,8 +1,157 @@
 {
   "devDependencies": {
+    "@types/async": "^3.2.8",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
+    "@types/nconf": "^0.10.1",
+    "@types/node": "^16.9.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
-    "eslint-config-google": "^0.14.0"
-  }
+    "eslint-config-google": "^0.14.0",
+    "typescript": "^4.4.2"
+  },
+  "name": "typescript_test",
+  "description": "Learning typescript and javascript features",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "acorn": "^7.4.1",
+    "acorn-jsx": "^5.3.1",
+    "ajv": "^6.12.6",
+    "ansi-colors": "^4.1.1",
+    "ansi-regex": "^5.0.0",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^1.0.10",
+    "array-union": "^2.1.0",
+    "astral-regex": "^2.0.0",
+    "async": "^3.2.1",
+    "axios": "^0.27.2",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "callsites": "^3.1.0",
+    "chalk": "^4.1.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^8.2.0",
+    "concat-map": "^0.0.1",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.1",
+    "deep-is": "^0.1.3",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^3.0.0",
+    "emoji-regex": "^8.0.0",
+    "enquirer": "^2.3.6",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^2.1.0",
+    "eslint-visitor-keys": "^2.1.0",
+    "espree": "^7.3.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "express": "^4.18.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.2.5",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.11.0",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.1.1",
+    "fs.realpath": "^1.0.0",
+    "functional-red-black-tree": "^1.0.1",
+    "glob": "^7.1.7",
+    "glob-parent": "^5.1.2",
+    "globals": "^13.9.0",
+    "globby": "^11.0.4",
+    "has-flag": "^4.0.0",
+    "ignore": "^4.0.6",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.1",
+    "is-number": "^7.0.0",
+    "isexe": "^2.0.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "levn": "^0.4.1",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.truncate": "^4.4.2",
+    "lru-cache": "^6.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.4",
+    "minimatch": "^3.0.4",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "nconf": "^0.12.0",
+    "once": "^1.4.0",
+    "optionator": "^0.9.1",
+    "parent-module": "^1.0.1",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-type": "^4.0.0",
+    "picomatch": "^2.3.0",
+    "prelude-ls": "^1.2.1",
+    "progress": "^2.0.3",
+    "punycode": "^2.1.1",
+    "querystring": "^0.2.1",
+    "queue-microtask": "^1.2.3",
+    "regexpp": "^3.2.0",
+    "require-from-string": "^2.0.2",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "semver": "^7.3.5",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "slash": "^3.0.0",
+    "slice-ansi": "^4.0.0",
+    "sprintf-js": "^1.0.3",
+    "string-width": "^4.2.2",
+    "strip-ansi": "^6.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "table": "^6.7.1",
+    "text-table": "^0.2.0",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^1.14.1",
+    "tsutils": "^3.21.0",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "uri-js": "^4.4.1",
+    "uuid": "^8.3.2",
+    "v8-compile-cache": "^2.3.0",
+    "which": "^2.0.2",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yhou46/typescript_test.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yhou46/typescript_test/issues"
+  },
+  "homepage": "https://github.com/yhou46/typescript_test#readme"
 }
