--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": 
     {
-        "lib": ["ES2020", "DOM"],
+        "lib": ["ES2017", "DOM"],
         "module": "commonjs",
         "outDir": "dist",
         "sourceMap": true,
-        "strict": true,
-        "target": "ES2020"
+        "strict": false,
+        "target": "ES2019",
+        "types": ["node"],
     }, 
     "include":
     [
