--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "shebang-regex": "^3.0.0",
     "slash": "^3.0.0",
     "slice-ansi": "^4.0.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "sprintf-js": "^1.0.3",
     "string-width": "^4.2.2",
     "strip-ansi": "^6.0.0",
