--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": false,
         "target": "ES2019",
         "types": ["node"],
+        "skipLibCheck": true,
     }, 
     "include":
     [
